01-setup/manifests/http-mirror/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ztp-mirror
  annotations:
    haproxy.router.openshift.io/timeout: "600s"
spec:
  #host: ztp-mirror-ztp-mirror.apps.core-ocp.lab.kemo.network
  path: /
  to:
    kind: Service
    name: ztp-mirror
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
